--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -1,13 +1,13 @@
-name: Azure Static Web Apps CI/CD
+name: Azure Static Web App CI/CD
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - master
+      - main
 
 jobs:
   build_and_deploy_job:
@@ -16,23 +16,19 @@ jobs:
     name: Build and Deploy Job
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          submodules: true
+      
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "dist" # Built app content directory
-          app_build_command: "npm install && npm run build"
+          app_location: "/app"
+          api_location: "/api"
+          output_location: ""
+          app_build_command: "pip install -r requirements.txt"
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
