--- a/.github/workflows/master_webapp-ocp8.yml
+++ b/.github/workflows/master_webapp-ocp8.yml
@@ -78,5 +78,7 @@ jobs:
         with:
           app-name: 'webapp-ocp8'
           slot-name: 'Production'
+          package: .
+          clean: true
           
           
