--- a/.github/workflows/azure-deployment_webapp-ocp8.yml
+++ b/.github/workflows/azure-deployment_webapp-ocp8.yml
@@ -78,4 +78,5 @@ jobs:
         with:
           app-name: 'webapp-ocp8'
           slot-name: 'Production'
-          
+          package: .
+          clean: true
