--- a/.github/workflows/azure-deployment_ocp8azurefunctions.yml
+++ b/.github/workflows/azure-deployment_ocp8azurefunctions.yml
@@ -38,11 +38,27 @@ jobs:
         run: |
           cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           pip install -r requirements.txt
-
-      # Optional: Add step to run tests here
-
+      
+      - name: Install dependencies
+        run: |
+            pip install -r ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/requirements.txt
+  
+      - name: Verify installed packages
+        run: |
+            pip freeze
+  
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+            zip release.zip ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/* -r
+      
+      # Optional: Add step to run tests here
+      - name: Verify installed packages
+        run: |
+          pip freeze
+
+
+      # - name: Zip artifact for deployment
+      #   run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
