--- a/.github/workflows/azure-deployment_ocp8azurefunctions.yml
+++ b/.github/workflows/azure-deployment_ocp8azurefunctions.yml
@@ -31,14 +31,16 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          python -m venv venv
-          source venv/bin/activate
-
+            python -m venv venv
+            source venv/bin/activate
+      - name: Verify requirements.txt exists
+        run: |
+            ls -l ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/requirements.txt
       - name: Install dependencies
         run: |
-          cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          pip install -r requirements.txt
-      
+            echo "Installing dependencies from ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/requirements.txt..."
+            pip install -r ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/requirements.txt || exit 1
+
       - name: Install dependencies
         run: |
             pip install -r ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/requirements.txt
@@ -49,16 +51,12 @@ jobs:
   
       - name: Zip artifact for deployment
         run: |
-            zip release.zip ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/* -r
+            zip release.zip ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/* -r -x "venv/*"
       
       # Optional: Add step to run tests here
       - name: Verify installed packages
         run: |
-          pip freeze
-
-
-      # - name: Zip artifact for deployment
-      #   run: zip release.zip ./* -r
+            pip freeze
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
